--- a/myapp/templates/detail.html
+++ b/myapp/templates/detail.html
@@ -8,7 +8,7 @@
     <!-- 댓글쓰는곳 -->
     <form action="{% url 'comment_write' board_id=board.id %}" method="POST">
         {% csrf_token %}
-        <input type="textarea" name="content" placeholder="Write your comments">
+        <input type="text" name="content" placeholder="Write your comments">
         <input type="submit" value="Write" />
     </form>
     <hr>
