--- a/myapp/templates/detail.html
+++ b/myapp/templates/detail.html
@@ -8,8 +8,16 @@
     <!-- 댓글쓰는곳 -->
     <form action="{% url 'comment_write' board_id=board.id %}" method="POST">
         {% csrf_token %}
-        <input type="text" name="content" placeholder="Write your comments">
-        <input type="submit" value="Write" />
+        대기줄이 혼잡한가요?
+        <select name="crowded">
+                <option value="모름">모름</option>
+                <option value="매우혼잡" selected>매우혼잡</option>
+                <option value="혼잡">혼잡</option>
+                <option value="보통">보통</option>
+        </select>
+        <br>
+        <input type="text" name="content" placeholder="">
+        <input type="submit" value="입력" />
     </form>
     <hr>
 
@@ -17,7 +25,7 @@
     <!-- 댓글목록 -->
     {% for comment in board.comments.all %}
         <div class="comment">
-          <p>{{ comment.comment_contents }}</p>
+          {{ comment.dropdown }} | {{ comment.comment_contents }}
         </div>
 
     {% empty %}
